# HJGtools

./: README.en.md  README.md  build.gradle  local.properties  settings.gradle
Base/: build.gradle
Base/src/main/: AndroidManifest.xml
Base/src/main/assets/: pdf.html  pdf.js
Base/src/main/res/anim/: enter_fade.xml  enter_trans_from_right.xml  enter_trans_from_top.xml  enter_zoom_in.xml  exit_fade.xml  exit_zoom_out.xml
Base/src/main/res/drawable/: bg_bottom_line.xml  bg_cornor_all_gray.xml  bg_cornor_strokel_black.xml  bg_top_cornor_white.xml  bg_white_circle_corner.xml  dividerline.xml  edit_cursor_color.xml  ic_cancel.xml  line_dash.xml  progress_horizon.xml  progress_horizon_special.xml  progressbar_bg.xml  selector_bg_cornor_all.xml
Base/src/main/res/layout/: activity_pdfwebview.xml  dialog_custom_base.xml  dialog_fullscreen.xml  dialog_ios_taobao.xml  dialog_share.xml  layout_empty.xml  layout_image_toast.xml  popup_bubble.xml  titlebar.xml
Base/src/main/res/values/: attrs.xml  colors.xml  ids.xml  themes.xml
MvcAndMvp/: build.gradle
MvcAndMvp/src/main/: AndroidManifest.xml
aidlclient/: build.gradle
aidlclient/src/main/: AndroidManifest.xml
app/: .gitignore  build.gradle
app/Stardard/release/: output-metadata.json
app/Test/debug/: output-metadata.json
app/Test/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: h.html  picChooser.html
app/src/main/jni/: CMakeLists.txt  Native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
interface/: login
keystore/: key.txt  keystore
(+529 files in other folders)
